# aeon-v1

./: .env.lmstudio.template  .gitignore  Aeon Launcher.bat  Aeon Launcher.vbs  README.md  env-vars.txt  pyproject.toml
docs/: INTEGRATION_STATUS.md  README.md  memory_model.md  recursive_learning_loop.md  setup_from_github.md  tools_manifest.md
firmware/: README.md
local/: README.md  launcher_config.example.json
memory/: README.md
scripts/: README.md  aeon_bridge.py  aeon_launcher.py  aeon_runner.py
src/: README.md
src/aeon_v1/: README.md  __init__.py  agent.py  aging.py  background_consolidation.py  chat_cli.py  config.py  consolidate.py  conversation.py  dashboard.py  data_write_agent.py  decision.py  embeddings.py  evaluate.py  ingest.py  launcher_config.py  linker.py  llm.py  manifest_agent.py  media.py  memory_store.py  mesh_dispatch.py  music_cli.py  music_executor.py  orchestrator.py  reflect.py  reflection_maintenance.py  (+9 more)
tests/: README.md  test_agent_orchestrator.py  test_aging.py  test_chat_cli.py  test_confidence_adjustment.py  test_consolidation.py  test_conversation.py  test_embeddings.py  test_evaluate.py  test_feedback.py  test_launcher_dashboard.py  test_layer3.py  test_llm.py  test_lmstudio_parallel.py  test_manifest_agent.py  test_media.py  test_memory_store.py  test_mesh_dispatch.py  test_music_executor.py  test_music_routing.py  test_reflection_failures.py  test_reflection_maintenance.py  test_runtime.py  test_search_agent.py  test_self_inspection_agent.py  test_shared_vault.py  test_simulation_tool_mapping.py
vault/: README.md  index.md
(+5 files in other folders)
